[FIX] web: don't apply col span on small screen
This commit avoids setting the `grid-column: span 2;` CSS rules (inline)
in form view when we are on small screen.

Before the removal of d-contents it was not an issue as it was not a
grid but a flex on small screen.

Steps to reproduce:
* Open Odoo on small Screen
* Go to Contact
* Select a Company
* Go to the "Sales & Purchase" pane
* The "Purchase" group has 2 grid columns and the render is ugly => BUG

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -491,6 +491,10 @@
             &.o_form_fw_labels {
                 grid-template-columns: 150px 1fr;
             }
+
+            .o_cell_custom {
+                grid-column: span var(--o-grid-column-span, 1);
+            }
         }
     }
 
